fix style for buttons to prevent their text from wrapping

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -107,6 +107,6 @@ body {
 }
 
 // Don't wrap text in buttons
-.mat-mdc-button {
+.mat-mdc-button-base {
   white-space: nowrap;
 }
